# SensorFlowX

./: README.md  grafana-dashboard-aero-sensor.yaml
ArduinoAirQuality/: ArduinoAirQuality.ino  README.md
aero-sensor-broker/: README.md
aero-sensor-broker/app/: Cargo.toml  Dockerfile
aero-sensor-broker/app/settings/: Settings.toml
aero-sensor-broker/app/src/: arduino.rs  cache.rs  config.rs  data_manipulation.rs  errors.rs  influxdb.rs  main.rs  routes.rs
aero-sensor-broker/kubernetes/: deployment.yaml  fleet.yaml
aero-sensor-broker/kubernetes/helm-chart/: Chart.yaml  values.yaml
aero-sensor-broker/kubernetes/helm-chart/templates/: deployment.yaml
