[package]
name = "aero-sensor-broker"
version = "0.2.0"
edition = "2021"

[dependencies]
async-trait = "0.1.81"
serialport = "4.4"
tokio = { version = "1.39.1", features = ["full"] }
influxdb2 = "0.5.2"
chrono = "0.4.38"
futures = "0.3.30"
env_logger = "0.11.5"
log = "0.4.22"
config = "0.14.0"
serde = "1.0.204"
serde_json = "1.0.120"
warp = "0.3.7"
