[package]
name = "aero-sensor-broker"
version = "1.0.0"
edition = "2021"

[dependencies]
serialport = "4.5.0"
tokio = { version = "1.39.2", features = ["full"] }
influxdb2 = "0.5.2"
chrono = "0.4.38"
futures = "0.3.30"
env_logger = "0.11.5"
log = "0.4.22"
config = "0.14.0"
serde = "1.0.208"
serde_json = "1.0.125"
warp = "0.3.7"
